added all files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,12 @@ project(ee205_lab_08d_animal_farm_1_to_clion)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(ee205_lab_08d_animal_farm_1_to_clion main.cpp)
+add_executable(animalFarm
+        main.c
+        config.h
+        addCats.c addCats.h
+        catDatabase.c catDatabase.h
+        catValidation.c catValidation.h
+        deleteCats.c deleteCats.h
+        reportCats.c reportCats.h
+        updateCats.c updateCats.h)
