changed filetypes to cpp and changed some include libraries

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,11 +4,11 @@ project(ee205_lab_08d_animal_farm_1_to_clion)
 set(CMAKE_CXX_STANDARD 14)
 
 add_executable(animalFarm
-        main.c
+        main.cpp
         config.h
-        addCats.c addCats.h
-        catDatabase.c catDatabase.h
-        catValidation.c catValidation.h
-        deleteCats.c deleteCats.h
-        reportCats.c reportCats.h
-        updateCats.c updateCats.h)
+        addCats.cpp addCats.h
+        catDatabase.cpp catDatabase.h
+        catValidation.cpp catValidation.h
+        deleteCats.cpp deleteCats.h
+        reportCats.cpp reportCats.h
+        updateCats.cpp updateCats.h)
