I did not change anything at first, and it just started working.  The actual changes are all after it started working, and I don't know why.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,4 +9,5 @@ add_executable(animalFarm
         catDatabase.cpp catDatabase.h
         addCats.cpp addCats.h
         catValidation.cpp catValidation.h
-        reportCats.cpp reportCats.h)
+        reportCats.cpp reportCats.h
+        deleteCats.cpp deleteCats.h)
