added gender header and files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,12 +5,14 @@ project(${projname})
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(animalFarm
-               main.cpp
-               config.h
-               Cat.cpp Cat.h
-               addCats.cpp addCats.h
-               catValidation.cpp catValidation.h
-               reportCats.cpp reportCats.h
-               deleteCats.cpp deleteCats.h
-               Node.cpp Node.h Animal.cpp Animal.h Weight.cpp Weight.h)
+add_executable( animalFarm
+                main.cpp
+                config.h
+                Cat.cpp Cat.h
+                addCats.cpp addCats.h
+                catValidation.cpp catValidation.h
+                reportCats.cpp reportCats.h
+                deleteCats.cpp deleteCats.h
+                Node.cpp Node.h
+                Animal.cpp Animal.h
+                Weight.cpp Weight.h Gender.cpp Gender.h)
