re added node.h

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,9 +9,9 @@ add_executable( animalFarm
                 main.cpp
                 config.h
                 Cat.cpp Cat.h
-                Node.cpp Node.h
+        Node.h
                 Animal.cpp Animal.h
                 Weight.cpp Weight.h
                 Gender.cpp Gender.h
                 Mammal.cpp Mammal.h
-                Color.cpp Color.h List.cpp List.h)
+                Color.cpp Color.h List.cpp List.h Node.h)
